# mr_house

./: .dockerignore  Cargo.toml  Dockerfile  example.env
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
src/: lib.rs  main.rs  slotmachine.rs
src/commands/: info.rs  libcoin.rs  mod.rs
src/commands/slot_machine/: gore_slot_machine.rs  mod.rs  slot_machine.rs  slots.rs
src/services/: libcoin.rs  mod.rs
