[package]
name = "mr_house"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
dotenv = "0.15.0"
once_cell = "1.21.3"
poise = "0.6.1"
rand = "0.9.1"
reqwest = { version ="0.12.20", features = ["json"] }
serde = "1.0.219"
serenity = "0.12.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "full"] }
tracing = "0.1.41"

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "dependency-tree"] }
